images fixed on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,6 @@ nav li {
     display: block;
 }
 
-
 .current {
     text-decoration: underline;
 }
@@ -93,9 +92,10 @@ p {
 }
 
 .big-header {
-    width: 500px;
-    height: 150px;
-    object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
 }
 
 .text-content {
